# quadruped_ros2

./: LICENSE  README.md
champ/: CMakeLists.txt  package.xml
champ/include/champ/utils/: urdf_loader.h  xmlrpc_helpers.h
champ_base/: CMakeLists.txt  package.xml
champ_base/include/: actuator.h  message_relay.hpp  quadruped_controller.hpp  state_estimation.h  state_estimation.hpp
champ_base/src/: message_relay.cpp  quadruped_controller.cpp  state_estimation.cpp
champ_bringup/: CMakeLists.txt  package.xml
champ_bringup/config/: champ_params.yaml  joy_config.yaml  joystick_xbox.yaml  links.yaml  robot_localization_params.yaml  ros2_control.yaml  ros2_control_spot.yaml  twist_mux_config.yaml
champ_bringup/config/teleop/: teleop_logitech_f710.yaml  teleop_tiger_g2.yaml  teleop_tiger_g2_us.yaml  teleop_xbox.yaml  teleop_xbox_one.yaml  teleop_xbox_one_alt.yaml
champ_bringup/launch/: champ_bringup.launch.py  rviz.launch.py
champ_bringup/rviz/: default_view.rviz  thorvald_default_view.rviz  thorvald_real_view.rviz
champ_description/: CMakeLists.txt  package.xml
champ_description/urdf/: anymal.urdf  champ.urdf.xacro  leg.urdf.xacro  model.urdf  properties.urdf.xacro  simulated_full_sensor_suite.xacro  spot.urdf  spot.urdf.xacro  spot_leg.urdf.xacro
champ_description/urdf/anymal/: anymal.urdf
champ_description/urdf/champ/: champ.urdf.xacro  leg.urdf.xacro  properties.urdf.xacro
champ_description/urdf/spot/: spot.urdf.xacro  spot_leg.urdf.xacro
champ_gazebo/: CMakeLists.txt  package.xml
champ_gazebo/models/full_sensor_suite/: model.sdf
champ_gazebo/models/ground_container_office/: model.sdf
champ_gazebo/models/spot/: metadata.pbtxt  model.config  model.sdf
champ_gazebo/worlds/: void.world
champ_msgs/: CMakeLists.txt  package.xml
