<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>champ_bringup</name>
  <version>0.0.0</version>
  <description>todo</description>
  <maintainer email="todo@todo.com">TODO</maintainer>
  <license>Proprietary</license>
  <author email="todo@todo.com">TODO</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>twist_mux</depend>
  <depend>champ_description</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>